# misc-debug

./: .gitmodules  LICENSE
advent-of-code-2022/01/: part1.py  solution.py
customtkinter/: doit.py
debian-k3s/: Vagrantfile
github-download-counts/: github-download-counts.py
gitlab-artifact-container-pull/: .envrc.example  .gitignore  gitlab-artifact-container-pull.py  gitlab-artifact-container-pull.sh  gitlab-artifacts-download.py
k3s-debian-vagrant/: .envrc  Vagrantfile  delete-all.sh  demo-startup.sh  malcolm-control.sh  malcolm-destroy.sh  malcolm-startup.sh  nginx-startup.sh
k3s-debian-vagrant/hello-world/: hello-world.yml
k3s-debian-vagrant/nginx-ldap/: docker-compose.yml  nginx-k3s.yml
k3s-debian-vagrant/nginx-ldap/nginx/: .gitignore  nginx.conf
malcolm-ami/: packer_build.json  packer_vars.json.example
malcolm-ami/scripts/: Malcolm_AMI_Setup.sh
mandiant-ti-test/: mandiant-ti-test.py
mimictts/: .envrc  .gitignore  generate_voice_oggs.sh  requirements.txt
netbox/: netbox-tests.py  netbox-tests.rb
pcap-assets/: pcap-assets.py
pcap-subnets-from-broadcast/: subnets-from-broadcast.py
synchrophasor-debug/: C37.118_1PMU_UDP_minimal.stream  README.md  spicy_dump_output.json  spicy_dump_output.txt  zeek_dump_events.txt  zeek_hlto_hilti_debug.txt
vt-py-collections/: list_collections.py
yarapcap/: .gitignore  README.md  setup.cfg
yarapcap/src/yarapcap/: __init__.py  yarapcap.py
zeek-6-spicy-crash/: Dockerfile
zeek-known-routers/: known-routers.zeek
zeek-ldap-analyzer/: README.md  zeek-gcc.Dockerfile  zeek-llvm.Dockerfile
(+2 files in other folders)
