[metadata]
name = yarapcap
version = 0.0.1
author = Seth Grover
author_email = mero.mero.guero@gmail.com
description = YARA? PCAP?
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmguero-dev/misc-debug
project_urls =
    Bug Tracker = https://github.com/mmguero-dev/misc-debug/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
zip_safe = False
python_requires = >=3.6
install_requires =
    mmguero
    scapy
    yara
    yaraprocessor @ http://github.com/MITRECND/yaraprocessor/zipball/master/#sha=#sha1=d8aa77ce5a6233b7519fef19fe27a8f100988c6f

[options.packages.find]
where = src
